syntax = "proto3";

package auth;

message EmptyMessage {}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string avatar = 2;
}

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Refresh(EmptyMessage) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (LoginResponse);
}